--- a/css/estilo.css
+++ b/css/estilo.css
@@ -6,6 +6,7 @@ body{
 footer, nav{
     background-color: #FFD8CC;
     font-family: 'Roboto', sans-serif;
+    font-weight: 100;
     height: 70px;
     font-size: 25px;
     color: #0A1D37;
@@ -19,6 +20,7 @@ header{
     background-size:cover;
     height: 500px;
     font-family: 'Roboto', sans-serif;
+    font-weight: 700;
     font-size: 25px;
     color: #0A1D37; 
     text-align:right;
